homepage ui design

--- a/web-cms/src/app/login/login.component.html
+++ b/web-cms/src/app/login/login.component.html
@@ -24,7 +24,7 @@
     <div class="relative flex-grow flex-col w-full flex justify-center items-center pt-10">
       <div class="w-full login-page-main-form bg-white px-10 py-8 rounded-xl shadow-2xl">
         <h1 class="text-3xl font-bold text-center mb-5">Welcome back!</h1>
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" action="" method="" class="">
+        <form (ngSubmit)="onSubmit()" action="" method="" class="">
           <div class="w-full mb-5 relative">
             <label for="login-email-input text-xs pb-1 font-semibold">Email</label>
             <input type="email" name="" id="login-email-input" placeholder="Enter your email" class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-8 hover:border-opacity-40">
