--- a/web-cms/src/app/home/home.component.html
+++ b/web-cms/src/app/home/home.component.html
@@ -1,1 +1,106 @@
-<p>home works!</p>
+<body class="font-sans">
+  <div class="w-full">
+    <header
+      class="w-4/6 body-font mx-auto flex flex-wrap flex-col md:flex-row p-5">
+      <a class="container w-2/4" href="/">
+        <div class="flex flex-wrap items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+            stroke="currentColor" stroke-linecap="round"
+            stroke-linejoin="round" stroke-width="2"
+            class="w-10 h-10 text-white p-2 bg-mineral-green-500 rounded-full"
+            viewBox="0 0 24 24">
+            <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+          </svg>
+          <span class="ml-2 text-xl">My Church CMS</span>
+        </div>
+      </a>
+      <div class="container w-2/4 flex flex-wrap items-center justify-end">
+        <button
+          class="inline-flex items-center bg-white font-semibold border-0 ml-4 py-2 px-3 focus:outline-none hover:bg-mineral-green-500 hover:text-white rounded drop-shadow-xl text-xs mt-4 md:mt-0">Sign
+          Up</button>
+        <button
+          class="inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 ml-4 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl text-xs mt-4 md:mt-0">Log
+          In</button>
+      </div>
+    </header>
+
+    <!-- Hero Start -->
+    <section id="hero" class="w-4/6 mx-auto p-5 pt-0 flex items-center">
+      <div class="container w-1/2 inline-block py-3">
+        <h1 class="text-4xl font-bold">The only web content management
+          system
+          for your church.</h1>
+        <p class="text-lg py-3">Stay connected with your community anytime,
+          anywhere with a custom mobile app for your church.</p>
+        <div class="container py-3">
+          <button
+            class="inline-flex items-center bg-mineral-green-500 text-white font-semibold text-lg border-0 py-3 px-4 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl mt-4 md:mt-0">Get
+            Started</button>
+        </div>
+      </div>
+      <div class="container w-1/2 inline-block">
+        <img src="../../assets/hero-image.png" alt srcset class="w-full">
+      </div>
+    </section>
+    <!-- Hero End -->
+
+    <section class="w-full bg-mineral-green-800 p-10 flex items-center justify-center">
+      <div class="container w-4/6 flex items-center justify-center">
+        <div class="container w-3/4 inline-block text-center text-white">
+          <h2 class="text-3xl font-bold pb-3">My Church CMS</h2>
+          <p class="py-3 text-base">Catholic church content management system (CCMS) to effectively manage each Catholic parish
+            information and
+            resources, while utilizing its app builder to enable Catholic parishes to accelerate the development process of creating their
+            own parish mobile apps, which provide parishioners with on-demand and timely access to religious resources, events, and
+            announcements via mobile apps.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="w-4/6 mx-auto p-5 pt-0 pb-20 flex items-center justify-center">
+      <div class="container w-3/4 inline-block">
+        <img src="../../assets/hero-image.png" alt srcset class="w-2/3 block mx-auto">
+        <div class="container text-center">
+          <h2 class="text-3xl font-bold pb-3">The complete solution for church engagement</h2>
+          <p class="py-3 text-base">Engaging your church community through one centralized, powerful, and simple-to-use system is crucial
+            for expanding your reach and growing your community. That's why we built the Subsplash Platform—to give you a single place to
+            connect with your community anytime, anywhere.</p>
+        </div>
+
+        <div class="container inline-block">
+          <div class="flex align-top">
+            <div class="container w-1/3 inline-block">
+              <img src="../../assets/hero-image.png" alt srcset class="w-full">
+              <div class="container text-center">
+                <h2 class="text-xl font-bold pb-3">Mobile apps</h2>
+                <p class="text-base">Engage your community on the go with a custom mobile app for your church.</p>
+              </div>
+            </div>
+            <div class="container w-1/3 inline-block">
+              <img src="../../assets/hero-image.png" alt srcset class="w-full">
+              <div class="container text-center">
+                <h2 class="text-xl font-bold pb-3">Media delivery</h2>
+                <p class="text-base">Effortlessly connect your media to your website and apps to make it more accessible than ever before!</p>
+              </div>
+            </div>
+            <div class="container w-1/3 inline-block">
+              <img src="../../assets/hero-image.png" alt srcset class="w-full">
+              <div class="container text-center">
+                <h2 class="text-xl font-bold pb-3">Content Management</h2>
+                <p class="text-base">Manage all posts and announcements through one centralized, powerful, and simple-to-use management
+                  system.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="w-full bg-mineral-green-950 py-10 flex justify-center">
+      <div class="container w-4/6 text-white text-center opacity-60">
+        © 2023 MyChurchApp. developed by Moses Lau Yi Hieng | All Rights Reserved
+      </div>
+    </footer>
+  </div>
+</body>
