--- a/web-cms/src/app/home/home.component.html
+++ b/web-cms/src/app/home/home.component.html
@@ -16,11 +16,9 @@
       </a>
       <div class="container w-2/4 flex flex-wrap items-center justify-end">
         <button
-          class="inline-flex items-center bg-white font-semibold border-0 ml-4 py-2 px-3 focus:outline-none hover:bg-mineral-green-500 hover:text-white rounded drop-shadow-xl text-xs mt-4 md:mt-0">Sign
-          Up</button>
+          class="inline-flex items-center bg-white font-semibold border-0 ml-4 py-2 px-3 focus:outline-none hover:bg-mineral-green-500 hover:text-white rounded drop-shadow-xl text-xs mt-4 md:mt-0" (click)="goToRegister()">Sign Up</button>
         <button
-          class="inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 ml-4 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl text-xs mt-4 md:mt-0">Log
-          In</button>
+          class="inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 ml-4 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl text-xs mt-4 md:mt-0" (click)="goToLogin()">Log In</button>
       </div>
     </header>
 
@@ -34,8 +32,7 @@
           anywhere with a custom mobile app for your church.</p>
         <div class="container py-3">
           <button
-            class="inline-flex items-center bg-mineral-green-500 text-white font-semibold text-lg border-0 py-3 px-4 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl mt-4 md:mt-0">Get
-            Started</button>
+            class="inline-flex items-center bg-mineral-green-500 text-white font-semibold text-lg border-0 py-3 px-4 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl mt-4 md:mt-0" (click)="goToLogin()">Get Started</button>
         </div>
       </div>
       <div class="container w-1/2 inline-block">
