--- a/web-cms/src/app/login/login.component.html
+++ b/web-cms/src/app/login/login.component.html
@@ -2,12 +2,18 @@
   <div class="login-page flex relative w-screen h-screen">
     <div class="fixed z-50 w-full">
       <header class="body-font mx-auto flex flex-wrap flex-col md:flex-row p-5">
-        <div class="container w-2/4 flex flex-wrapb items-center">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-mineral-green-500 rounded-full" viewBox="0 0 24 24">
-            <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-          </svg>
-          <span class="ml-2 text-xl">My Church CMS</span>
-        </div>
+        <a class="container w-2/4" href="/">
+          <div class="flex flex-wrap items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none"
+              stroke="currentColor" stroke-linecap="round"
+              stroke-linejoin="round" stroke-width="2"
+              class="w-10 h-10 text-white p-2 bg-mineral-green-500 rounded-full"
+              viewBox="0 0 24 24">
+              <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+            </svg>
+            <span class="ml-2 text-xl">My Church CMS</span>
+          </div>
+        </a>
         <div class="container w-2/4 flex flex-wrap items-center justify-end">
           <span class="text-xs font-semibold">Don't have an account?</span>
           <button (click)="goToRegister()" class="inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 ml-4 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl text-xs mt-4 md:mt-0">Sign Up
