add cursor pointer to login register

--- a/web-cms/src/app/login/login.component.html
+++ b/web-cms/src/app/login/login.component.html
@@ -61,7 +61,7 @@
       <div class="relative w-full flex justify-center items-center mt-8">
         <div class="text-xs text-black">
           Dont' have an account? 
-          <a (click)="goToRegister()" class="text-mineral-green-500 font-semibold hover:underline">Sign Up</a>
+          <a (click)="goToRegister()" class="text-mineral-green-500 font-semibold hover:underline hover:cursor-pointer">Sign Up</a>
         </div>
       </div>
     </div> 
