--- a/web-cms/src/app/register/register.component.html
+++ b/web-cms/src/app/register/register.component.html
@@ -72,8 +72,8 @@
   
         <div class="relative w-full flex justify-center items-center mt-8">
           <div class="text-xs text-black">
-            Dont' have an account? 
-            <a (click)="goToLogin()" class="text-mineral-green-500 font-semibold hover:underline">Sign Up</a>
+            Existing user? 
+            <a (click)="goToLogin()" class="text-mineral-green-500 font-semibold hover:underline hover:cursor-pointer">Log In</a>
           </div>
         </div>
       </div> 
