sign up input w/o validation

--- a/web-cms/src/app/login/login.component.html
+++ b/web-cms/src/app/login/login.component.html
@@ -32,7 +32,7 @@
         <h1 class="text-3xl font-bold text-center mb-5">Welcome back!</h1>
         <form (ngSubmit)="onSubmit()" action="" method="" class="">
           <div class="w-full mb-5 relative">
-            <label for="login-email-input text-xs pb-1 font-semibold">Email</label>
+            <label for="login-email-input" class="text-xs pb-1 font-semibold">Email</label>
             <input type="email" name="" id="login-email-input" placeholder="Enter your email" class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-8 hover:border-opacity-40">
             <div aria-hidden="true" class="input-icon left-2 top-8 absolute w-4 h-4 fill-black opacity-20">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="w-full mb-5 relative">
-            <label for="login-password-input text-xs pb-1 font-semibold">Password</label>
+            <label for="login-password-input" class="text-xs pb-1 font-semibold">Password</label>
             <input type="password" name="" id="login-password-input" placeholder="Enter password" class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-32 hover:border-opacity-40">
             <div aria-hidden="true" class="input-icon left-2 top-8 absolute w-4 h-4 fill-black opacity-20">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
