--- a/web-cms/src/app/register/register.component.html
+++ b/web-cms/src/app/register/register.component.html
@@ -28,6 +28,10 @@
       <div class="bg-slate-200 h-screen w-full absolute"></div>
     
       <div class="relative flex-grow flex-col w-full flex justify-center items-center pt-10">
+        <app-multi-step-form></app-multi-step-form>
+      </div>
+      
+      <!-- <div class="relative flex-grow flex-col w-full flex justify-center items-center pt-10">
         <div class="w-full register-page-main-form bg-white px-10 py-8 rounded-xl shadow-2xl">
           <h1 class="text-3xl font-bold text-center mb-5">Let's start registration!</h1>
           <form  (ngSubmit)="onSubmit()" action="" method="" class="">
@@ -76,6 +80,6 @@
             <a (click)="goToLogin()" class="text-mineral-green-500 font-semibold hover:underline hover:cursor-pointer">Log In</a>
           </div>
         </div>
-      </div> 
+      </div>  -->
     </div>
   </body>
