login with role base access

--- a/web-cms/src/app/login/login.component.html
+++ b/web-cms/src/app/login/login.component.html
@@ -30,10 +30,10 @@
     <div class="relative flex-grow flex-col w-full flex justify-center items-center pt-10">
       <div class="w-full login-page-main-form bg-white px-10 py-8 rounded-xl shadow-2xl">
         <h1 class="text-3xl font-bold text-center mb-5">Welcome back!</h1>
-        <form (ngSubmit)="onSubmit()" action="" method="" class="">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <div class="w-full mb-5 relative">
-            <label for="login-email-input" class="text-xs pb-1 font-semibold">Email</label>
-            <input type="email" name="" id="login-email-input" placeholder="Enter your email" class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-8 hover:border-opacity-40">
+            <label for="login-email" class="text-xs pb-1 font-semibold">Email</label>
+            <input type="email" id="login-email" placeholder="Enter your email" class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-8 hover:border-opacity-40" formControlName="email" required>
             <div aria-hidden="true" class="input-icon left-2 top-8 absolute w-4 h-4 fill-black opacity-20">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" />
@@ -41,8 +41,8 @@
             </div>
           </div>
           <div class="w-full mb-5 relative">
-            <label for="login-password-input" class="text-xs pb-1 font-semibold">Password</label>
-            <input type="password" name="" id="login-password-input" placeholder="Enter password" class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-32 hover:border-opacity-40">
+            <label for="login-password" class="text-xs pb-1 font-semibold">Password</label>
+            <input type="password" id="login-password" placeholder="Enter password" class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-32 hover:border-opacity-40" formControlName="password" required>
             <div aria-hidden="true" class="input-icon left-2 top-8 absolute w-4 h-4 fill-black opacity-20">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
@@ -52,7 +52,7 @@
               <a (click)="goToForgot()" id="forgot-password" draggable="false" class="relative cursor-pointer ml-auto mr-4 -top-5 text-xs text-mineral-green-500 font-semibold hover:underline">Forgot Password?</a>
             </div>       
           </div>
-          <button class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl text-xs">
+          <button type="submit" class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl text-xs">
             Log In
           </button>
         </form>
