--- a/web-cms/src/app/master-admin/layout/components/navbar/profile-menu/profile-menu.component.html
+++ b/web-cms/src/app/master-admin/layout/components/navbar/profile-menu/profile-menu.component.html
@@ -1,57 +1,55 @@
 <div class="relative ml-3">
-    <!-- Profile Button -->
-    <button
-      (click)="toggleMenu()"
-      class="relative flex rounded-full bg-gray-800 text-sm"
-      type="button"
-      aria-expanded="false"
-      aria-haspopup="true">
-      <span class="sr-only">Open user menu</span>
-      <img
-        clickOutside
-        (clickOutside)="isMenuOpen = false"
-        class="h-9 w-9 rounded-md"
-        src="https://avatars.githubusercontent.com/u/12519008?v=4"
-        alt="" />
-    </button>
-    <!-- Dropdown -->
-    <div
-      [ngClass]="
+  <!-- Profile Button -->
+  <button
+    (click)="toggleMenu()"
+    class="relative flex rounded-full text-gray-400 text-sm"
+    type="button"
+    aria-expanded="false"
+    aria-haspopup="true">
+    <span class="sr-only">Open user menu</span>
+    <svg
+      clickOutside
+      (clickOutside)="isMenuOpen = false"
+      class="h-9 w-9 rounded-md"
+      xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none">
+      <path stroke-linecap="round" stroke-linejoin="round"
+        d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
+    </svg>
+  </button>
+  <!-- Dropdown -->
+  <div
+    [ngClass]="
         isMenuOpen
           ? 'pointer-events-auto scale-100 animate-fade-in-up opacity-100 duration-200'
           : 'pointer-events-none scale-95 opacity-0 duration-100 ease-in'
       "
-      class="absolute right-0 mt-2 w-60 origin-top-right transform rounded-md bg-white py-4 shadow-custom ring-1 ring-transparent ring-opacity-5 transition focus:outline-none dark:bg-night-600">
-      <div class="flext-row flex items-center px-4 pb-4">
-        <div class="w-10 shrink-0">
-          <img class="rounded-md" src="https://avatars.githubusercontent.com/u/12519008?v=4" alt="" />
-        </div>
-        <div class="overflow-hidden px-2 text-sm font-semibold text-gray-700 dark:text-night-50">
-          Luciano Oliveira
-          <p class="truncate text-ellipsis text-xs font-semibold text-gray-400 dark:text-night-300">me@lanno.dev</p>
-        </div>
+    class="absolute right-0 mt-2 w-60 origin-top-right transform rounded-md bg-white py-4 shadow-custom ring-1 ring-transparent ring-opacity-5 transition focus:outline-none">
+    <div class="flext-row flex items-center px-4 pb-4">
+      <div class="w-10 shrink-0">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-10 h-10">
+          <path fill-rule="evenodd"
+            d="M18.685 19.097A9.723 9.723 0 0021.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 003.065 7.097A9.716 9.716 0 0012 21.75a9.716 9.716 0 006.685-2.653zm-12.54-1.285A7.486 7.486 0 0112 15a7.486 7.486 0 015.855 2.812A8.224 8.224 0 0112 20.25a8.224 8.224 0 01-5.855-2.438zM15.75 9a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z"
+            clip-rule="evenodd" />
+        </svg>
       </div>
-  
-      <div class="border-b border-dashed border-gray-200 dark:border-night-500"></div>
-  
-      <ul class="my-2 mx-4">
-        <li
-          class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500 dark:hover:text-primary-500">
-          Your Profile
-        </li>
-        <li
-          class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500 dark:hover:text-primary-500">
-          Language
-        </li>
-        <li
-          class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500 dark:hover:text-primary-500">
-          Settings
-        </li>
-        <li
-          routerLink="/auth"
-          class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-primary-500 dark:text-night-200 dark:hover:bg-night-500 dark:hover:text-primary-500">
-          Sign out
-        </li>
-      </ul>
+      <div class="overflow-hidden px-2 text-sm font-semibold text-gray-700">
+        Luciano Oliveira
+        <p class="truncate text-ellipsis text-xs font-semibold text-gray-400">me@lanno.dev</p>
+      </div>
     </div>
+
+    <div class="border-b border-dashed border-gray-200"></div>
+
+    <ul class="my-2 mx-4">
+      <li
+        class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-mineral-green-500">
+        Your Profile
+      </li>
+      <li
+        routerLink="/auth"
+        class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-mineral-green-500">
+        Sign out
+      </li>
+    </ul>
   </div>
+</div>
