--- a/web-cms/src/app/master-admin/layout/components/sidebar/sidebar-submenu/sidebar-submenu.component.html
+++ b/web-cms/src/app/master-admin/layout/components/sidebar/sidebar-submenu/sidebar-submenu.component.html
@@ -1,10 +1,10 @@
 <div
   class="max-h-0 overflow-hidden pt-1 pl-4 transition-all duration-500"
   [ngClass]="{ hidden: !menuService.showSideBar, 'max-h-screen': submenu.expanded }">
-  <ul class="flex flex-col border-l border-dashed border-gray-200 pl-2 text-night-200 dark:border-night-500">
+  <ul class="flex flex-col border-l border-dashed border-gray-200 pl-2 text-gray-200">
     <li *ngFor="let sub of submenu.children">
       <div
-        class="flex rounded text-gray-400 hover:bg-gray-100 dark:text-night-300 dark:hover:bg-night-600"
+        class="flex rounded text-gray-400 hover:bg-gray-100"
         (click)="toggleMenu(sub)">
         <!-- Condition -->
         <ng-container
@@ -16,7 +16,7 @@
         <ng-template #parentMenu let-sub="sub">
           <a
             [routerLink]="sub.route"
-            routerLinkActive="text-primary-500"
+            routerLinkActive="text-mineral-green-500"
             [routerLinkActiveOptions]="{ exact: true }"
             class="inline-block w-full px-4 py-2 text-xs font-semibold">
             {{ sub.label }}
@@ -30,8 +30,8 @@
           </a>
           <button
             [ngClass]="{ hidden: !menuService.showSideBar, 'rotate-90': sub.expanded }"
-            class="flex items-center p-1 text-gray-400 transition-all duration-500 dark:text-night-400">
-            <svg-icon src="assets/icons/heroicons/solid/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
+            class="flex items-center p-1 text-gray-400 transition-all duration-500">
+            <svg-icon src="../../../../../../assets/icons/heroicons/outline/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
           </button>
         </ng-template>
       </div>
