--- a/web-cms/src/app/master-admin/layout/components/navbar/profile-menu/profile-menu.component.html
+++ b/web-cms/src/app/master-admin/layout/components/navbar/profile-menu/profile-menu.component.html
@@ -33,8 +33,8 @@
         </svg>
       </div>
       <div class="overflow-hidden px-2 text-sm font-semibold text-gray-700">
-        Luciano Oliveira
-        <p class="truncate text-ellipsis text-xs font-semibold text-gray-400">me@lanno.dev</p>
+        {{ this.profileName }}
+        <p class="truncate text-ellipsis text-xs font-semibold text-gray-400">{{ this.profileEmail }}</p>
       </div>
     </div>
 
@@ -42,11 +42,12 @@
 
     <ul class="my-2 mx-4">
       <li
+        (routerLink)="['/master-admin/profile']"
         class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-mineral-green-500">
         Your Profile
       </li>
       <li
-        routerLink="/auth"
+        (click)="signOut()"
         class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-mineral-green-500">
         Sign out
       </li>
