--- a/web-cms/src/app/register/multi-step-form/multi-step-form.component.html
+++ b/web-cms/src/app/register/multi-step-form/multi-step-form.component.html
@@ -180,10 +180,10 @@
           type="button"
           id="btn-next-step"
           [ngClass]="{
-            'bg-gray-400': form.get('organization')!.invalid || (form.get('applicant')!.invalid && currentStep === 2),
-            'hover:bg-gray-400': form.get('organization')!.invalid || (form.get('applicant')!.invalid && currentStep === 2),
+            'bg-gray-400 hover:bg-gray-400': form.get('organization')!.invalid || (form.get('applicant')!.invalid && currentStep === 2),
+            'bg-mineral-green-500 hover:bg-mineral-green-600': !form.get('organization')!.invalid && !(form.get('applicant')!.invalid && currentStep === 2)
           }"
-          class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded drop-shadow-xl text-xs">
+          class="justify-center w-full h-10 inline-flex items-center text-white font-semibold border-0 py-2 px-3 focus:outline-none rounded drop-shadow-xl text-xs">
           Next Step
         </button>
         <button
