--- a/web-cms/src/app/master-admin/dashboard/components/request-table-item/request-table-item.component.html
+++ b/web-cms/src/app/master-admin/dashboard/components/request-table-item/request-table-item.component.html
@@ -1,7 +1,7 @@
 <td class="py-2 pr-2">
     <div class="flex items-center">
       <div class="flex flex-col justify-items-start">
-        <a href="#" class="mb-1 text-sm font-semibold text-gray-900">{{
+        <a class="mb-1 text-sm font-semibold text-gray-900">{{
             table.request_id
         }}</a>
       </div>
