--- a/web-cms/src/app/master-admin/dashboard/pages/single-user-request/single-user-request.component.html
+++ b/web-cms/src/app/master-admin/dashboard/pages/single-user-request/single-user-request.component.html
@@ -3,11 +3,64 @@
 		<div class="inline-block">
 			<h3 class="font-semibold text-gray-900">User Request Dashboard</h3>
 			<div class="space-x-1 text-xs font-medium text-gray-400">
-				<a class="hover:text-primary-500">Details</a>
-          <span> - {{ table[0].request_id }} </span>
+				<a>Details</a>
+				<span> - {{ table[0].request_id }} </span>
 			</div>
 		</div>
 	</div>
 
-	<div app-request-table class="md:col-span-2 xl:col-span-3"></div>
+	<div class="md:col-span-2 xl:col-span-3">
+		<div class="flex-col rounded-lg bg-white px-8 py-8 sm:flex-row">
+			<div class="mb-4 flex items-center justify-between">
+				<div class="flex-col items-center">
+					<h3 class="text-md font-bold text-gray-900 ">User Request - {{ table[0].request_id }}</h3>
+          <span class="text-sm text-gray-500"><i>Creation Date: {{ table[0].creation_date }}</i></span>
+        </div>
+			</div>
+
+      <hr>
+
+      <!-- Display Applicant Info -->
+      <div class="flex items-center justify-between py-4">
+				<div class="flex-col items-center">
+          <h4 class="text-md font-bold text-gray-900 py-4">Applicant Information</h4>
+					<p class="text-md py-1">First Name: {{ table[0].applicant_first_name }}</p>
+          <p class="text-md py-1">Last Name: {{ table[0].applicant_last_name }}</p>
+          <p class="text-md py-1">Email: {{ table[0].applicant_email }}</p>
+				</div>
+			</div>
+
+      <hr>
+
+      <!-- Display Organization Info -->
+      <div class="flex items-center justify-between py-4">
+				<div class="flex-col items-center">
+          <h4 class="text-md font-bold text-gray-900 py-4">Organization Information</h4>
+					<p class="text-md py-1">Organization Name: {{ table[0].organization_name }}</p>
+          <p class="text-md py-1">Organization Demonination: {{ table[0].organizatiton_denomination }}</p>
+          <p class="text-md py-1">Member Size: {{ table[0].organization_member_size }}</p>
+          <p class="text-md py-1">Organization Address: {{ table[0].organization_address }}</p>
+          <p class="text-md py-1">Organization City: {{ table[0].organization_city }}</p>
+          <p class="text-md py-1">Organization State: {{ table[0].organization_state }}</p>
+          <p class="text-md py-1">Organization Zip: {{ table[0].organization_zip }}</p>
+          <p class="text-md py-1">Proof of Document: </p>
+          <a href="{{ table[0].document_link }}" class="text-mineral-green-500 hover:text-black underline font-bold">Link to Document</a>
+				</div>
+			</div>
+
+      <!-- Button Approve or Reject -->
+      <div class="flex items-center justify-end py-4">
+				<div class="flex-col items-center mr-4 w-[140px]">
+          <button type="submit" class="justify-center w-full h-10 inline-flex items-center bg-red-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-red-600 rounded text-xs" (click)="rejectRequest()">
+            Reject
+          </button>
+				</div>
+        <div class="flex-col items-center w-[140px]">
+          <button type="submit" class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded text-xs" (click)="approveRequest()">
+            Approve
+          </button>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
