--- a/web-cms/src/app/super-admin/account/components/account-table/account-table.component.html
+++ b/web-cms/src/app/super-admin/account/components/account-table/account-table.component.html
@@ -5,8 +5,8 @@
         <h3 class="text-md font-bold text-gray-900 ">User Accounts Table</h3>
       </div>
       <button
-        [routerLink]="['/super-admin/account/create-account']"
-        class="flex-none rounded-md bg-gray-100 px-4 py-2.5 text-xs font-semibold text-gray-500 hover:bg-gray-200">
+        [routerLink]="['/super-admin/account/app-create-account']"
+        class="flex-none rounded-md bg-mineral-green-500 px-4 py-2.5 text-xs font-semibold text-white focus:outline-none hover:bg-mineral-green-600">
         Create Account
       </button>
     </div>
