create user logic

--- a/web-cms/src/app/super-admin/account/pages/single-account/single-account.component.html
+++ b/web-cms/src/app/super-admin/account/pages/single-account/single-account.component.html
@@ -31,23 +31,16 @@
                 </div>
             </div>
 
-            <!-- Button Approve or Reject -->
-            <!-- <div class="flex items-center justify-end py-4">
+            <!-- Button Deactivate -->
+            <div class="flex items-center justify-end py-4">
                 <div class="flex-col items-center mr-4 w-[140px]">
                     <button type="submit"
                         class="justify-center w-full h-10 inline-flex items-center bg-red-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-red-600 rounded text-xs"
-                        (click)="rejectRequest()">
-                        Reject
+                        (click)="deactivateAccount()">
+                        Deactivate Account
                     </button>
                 </div>
-                <div class="flex-col items-center w-[140px]">
-                    <button type="submit"
-                        class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded text-xs"
-                        (click)="approveRequest()">
-                        Approve
-                    </button>
-                </div>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
