--- a/web-cms/src/app/super-admin/account/pages/create-account/create-account.component.html
+++ b/web-cms/src/app/super-admin/account/pages/create-account/create-account.component.html
@@ -1,1 +1,103 @@
-<p>create-account works!</p>
+<div class="container py-6 px-24">
+  <div class="mb-4 flex justify-between">
+    <div class="inline-block">
+      <h3 class="font-semibold text-gray-900">User Account Dashboard</h3>
+      <div class="space-x-1 text-xs font-medium text-gray-400">
+        <a class="hover:text-primary-500">Account</a>
+        <span> - Create New User</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="md:col-span-2 xl:col-span-3">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="flex-col rounded-lg bg-white px-8 py-8 sm:flex-row">
+        <div class="mb-4 flex items-center justify-between">
+          <div class="flex-col items-center">
+            <h3 class="text-md font-bold text-gray-900 ">Create New User</h3>
+          </div>
+        </div>
+
+        <hr>
+
+        <!-- Display Applicant Info -->
+        <div class="flex items-center justify-between py-4">
+          <div class="flex-col items-center">
+
+            <h4 class="text-md font-bold text-gray-900 py-4">Account Information</h4>
+            <ng-container formGroupName="user">
+              <div class="flex">
+                <div class="w-1/2 mr-4 mb-5 inline-block">
+                  <label for="applicant-first-name" class="text-xs pb-1 font-semibold">First Name</label>
+                  <input type="text" id="applicant-first-name" placeholder="John" formControlName="firstName"
+                    class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pr-8 pl-2 hover:border-opacity-40"
+                    required>
+                </div>
+                <div class="w-1/2 mr-4 mb-5 inline-block">
+                  <label for="applicant-last-name" class="text-xs pb-1 font-semibold">Last Name</label>
+                  <input type="text" id="applicant-last-name" placeholder="Doe" formControlName="lastName"
+                    class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pr-8 pl-2 hover:border-opacity-40"
+                    required>
+                </div>
+              </div>
+              <div class="w-full mb-5 relative">
+                <label for="applicant-email" class="text-xs pb-1 font-semibold">Email</label>
+                <input type="email" id="applicant-email" placeholder="johndoe@mail.com" formControlName="email"
+                  class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-8 hover:border-opacity-40"
+                  required>
+                <div aria-hidden="true" class="input-icon left-2 top-8 absolute w-4 h-4 fill-black opacity-20">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                    class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" />
+                  </svg>
+                </div>
+              </div>
+              <div class="w-full mb-5 relative">
+                <label for="applicant-password" class="text-xs pb-1 font-semibold">Password</label>
+                <input id="applicant-password" placeholder="Minimum 8 characters" formControlName="password" type="password"
+                  class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-32 hover:border-opacity-40"
+                  required>
+                <div aria-hidden="true" class="input-icon left-2 top-8 absolute w-4 h-4 fill-black opacity-20">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                    class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
+                  </svg>
+                </div>
+              </div>
+              <div class="w-full mb-5 relative">
+                <label for="user-role" class="text-xs pb-1 font-semibold">User Role</label>
+                <select id="user-role" formControlName="userRole"
+                  class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-10 pr-8 hover:border-opacity-40"
+                  required>
+                  <option value="admin" default>Administrator</option>
+                  <option value="tech">Technical Administrator</option>
+                </select>
+                <div aria-hidden="true" class="input-icon left-2 top-8 absolute w-4 h-4 fill-black opacity-20">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                    class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M18 18.72a9.094 9.094 0 003.741-.479 3 3 0 00-4.682-2.72m.94 3.198l.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0112 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 016 18.719m12 0a5.971 5.971 0 00-.941-3.197m0 0A5.995 5.995 0 0012 12.75a5.995 5.995 0 00-5.058 2.772m0 0a3 3 0 00-4.681 2.72 8.986 8.986 0 003.74.477m.94-3.197a5.971 5.971 0 00-.94 3.197M15 6.75a3 3 0 11-6 0 3 3 0 016 0zm6 3a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0zm-13.5 0a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0z" />
+                  </svg>
+                </div>
+              </div>
+            </ng-container>
+          </div>
+        </div>
+
+        <!-- Button Deactivate -->
+        <div class="flex items-center justify-start py-4">
+          <div class="flex-col items-center w-[140px]">
+            <button type="submit"
+              class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded text-xs">
+              Create Account
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </form>
+  </div>
+
+</div>
