upload media fucntion logic

--- a/web-cms/src/app/super-admin/media/pages/upload-media/upload-media.component.html
+++ b/web-cms/src/app/super-admin/media/pages/upload-media/upload-media.component.html
@@ -28,12 +28,12 @@
 
       <div class="flex items-center justify-end py-4">
 				<div class="flex-col items-center mr-4 w-[140px]">
-          <button type="submit" class="justify-center w-full h-10 inline-flex items-center bg-white text-gray-500 border-gray-500 font-semibold border py-2 px-3 focus:outline-none rounded text-xs">
+          <button type="submit" class="justify-center w-full h-10 inline-flex items-center bg-white text-gray-500 border-gray-500 font-semibold border py-2 px-3 focus:outline-none rounded text-xs" (click)="clearFiles()">
             Cancel
           </button>
 				</div>
         <div class="flex-col items-center w-[140px]">
-          <button type="submit" class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded text-xs">
+          <button type="submit" class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded text-xs" (click)="uploadFiles()">
             Upload Files
           </button>
 				</div>
