media library show function logic

--- a/web-cms/src/app/super-admin/media/pages/view-media/view-media.component.html
+++ b/web-cms/src/app/super-admin/media/pages/view-media/view-media.component.html
@@ -8,6 +8,6 @@
 			</div>
 		</div>
 	</div>
-
-	<!-- <div app-account-table class="md:col-span-2 xl:col-span-3"></div> -->
+	
+	<div app-media-table class="md:col-span-2 xl:col-span-3"></div>
 </div>
