view post logic

--- a/web-cms/src/app/super-admin/post/pages/view-post/view-post.component.html
+++ b/web-cms/src/app/super-admin/post/pages/view-post/view-post.component.html
@@ -9,5 +9,5 @@
 		</div>
 	</div>
 
-	<!-- <div app-post-table class="md:col-span-2 xl:col-span-3"></div> -->
+	<div app-post-table class="md:col-span-2 xl:col-span-3"></div>
 </div>
