--- a/web-cms/src/app/super-admin/post/components/post-table-item/post-table-item.component.html
+++ b/web-cms/src/app/super-admin/post/components/post-table-item/post-table-item.component.html
@@ -1,1 +1,30 @@
-<p>post-table-item works!</p>
+<td class="py-2 pr-2">
+    <div class="flex items-center">
+        <div class="flex flex-col justify-items-start">
+            <a class="mb-1 text-sm font-semibold text-gray-900">{{
+                table.id
+                }}</a>
+        </div>
+    </div>
+</td>
+<td class="py-2 pl-2">
+    <span class="text-sm font-semibold text-gray-400">{{ table.title }}</span>
+</td>
+<td class="py-2 pl-2 text-right">
+    <span class="text-sm font-semibold text-gray-400">{{ table.timestamp[table.timestamp.length-1] }}</span>
+</td>
+<td class="py-2 pl-2 text-right">
+    <span class="text-sm font-semibold text-gray-400">{{ table.status }}</span>
+</td>
+<td class="py-2 pl-2 text-right">
+    <span class="text-sm font-semibold text-gray-400">{{ table.visibility }}</span>
+</td>
+<td class="py-2 pl-2 text-right">
+    <div class="flex justify-end">
+        <a
+            routerLink="details/{{ table.id }}"
+            class="flex h-7 w-7 items-center justify-center rounded-md bg-gray-200 text-gray-400 hover:text-white hover:bg-mineral-green-600">
+            <svg-icon src="../../../../../assets/icons/heroicons/outline/arrow-sm-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
+        </a>
+    </div>
+</td>
