--- a/web-cms/src/app/super-admin/post/pages/create-post/create-post.component.html
+++ b/web-cms/src/app/super-admin/post/pages/create-post/create-post.component.html
@@ -31,12 +31,12 @@
               </ejs-richtexteditor>
             </div>
 
-            <div class="mb-10 w-full">
+            <!-- <div class="mb-10 w-full">
               <div class="w-full border bg-gray-100 p-3">
                 <h4 class="text-base text-gray-500">RECENT UPDATE</h4>
               </div>
               <div class="w-full bg-white border p-3 text-sm">Item 1</div>
-            </div>
+            </div> -->
           </div>
 
           <div class="w-1/5 inline-block pt-6 align-top">
