--- a/web-cms/src/app/super-admin/layout/components/navbar/profile-menu/profile-menu.component.html
+++ b/web-cms/src/app/super-admin/layout/components/navbar/profile-menu/profile-menu.component.html
@@ -42,7 +42,7 @@
 
     <ul class="my-2 mx-4">
       <li
-        (routerLink)="['/master-admin/profile']"
+        (click)="navigateToProfile()"
         class="block cursor-pointer rounded-md px-3 py-2 text-sm font-semibold text-gray-700 hover:bg-gray-100 hover:text-mineral-green-500">
         Your Profile
       </li>
