fix navigation, organizations and home only

--- a/mobile-app/src/app/tab1/single-post/single-post.page.html
+++ b/mobile-app/src/app/tab1/single-post/single-post.page.html
@@ -1,8 +1,8 @@
 <div class="ion-padding">
   <ng-container>
-    <ion-title size="large">
+    <h1 size="large">
       {{ table[0].title }}
-    </ion-title>
+    </h1>
     <ion-label>Published at {{ table[0].timestamp[table[0].timestamp.length-1] }} </ion-label>
     <br/>
     <ion-label>Published by {{ table[0].author }} </ion-label>
