--- a/mobile-app/src/app/tabs/tabs.page.html
+++ b/mobile-app/src/app/tabs/tabs.page.html
@@ -5,14 +5,9 @@
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="posts" href="/app/posts">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Posts</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="settings" href="/app/settings">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Settings</ion-label>
+    <ion-tab-button tab="organizations" href="/app/organizations">
+      <ion-icon aria-hidden="true" name="business-outline"></ion-icon>
+      <ion-label>Organizations</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
